[gd_scene load_steps=3 format=3 uid="uid://bs8yabg17l3m8"]

[ext_resource type="Theme" uid="uid://bdae218hxrhbu" path="res://Demo/Resources/UITheme.tres" id="1_nmha1"]
[ext_resource type="Script" path="res://Demo/Scripts/UI/PauseMenu.gd" id="2_8w2re"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nmha1")
script = ExtResource("2_8w2re")

[node name="Translucency" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="MenuPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -43.5
offset_right = 67.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "= Game Paused ="
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="InfoButton" type="CheckButton" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Train Info"

[node name="ControlsPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -243.0
offset_top = -61.0
offset_right = 243.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="ControlsPanel/VBoxContainer"]
layout_mode = 2
text = "W - Throttle Up     S - Throttle Down     Z - Full Throttle
X - Cut Throttle     C - Full Reverse     Space - Brake"

[node name="CameraInfoControls" type="Label" parent="ControlsPanel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Middle Mouse - Pan Camera3D     Scroll Wheel - Zoom"

[connection signal="pressed" from="MenuPanel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="MenuPanel/VBoxContainer/InfoButton" to="." method="_on_info_button_toggled"]
